examples/kju/positive/extended_arythmetic/modulo_operator.kju
fun kju():Unit{
	var x:Int=3%2;
}