examples/kju/negative/parser/wrong_variable_case.kju
fun kju():Unit{
	var X:Unit;
}